noticket: Use AssertJ assertThat* in repository tests instead of org.junit.Assert.*